components/uic_attribute_store/include/attribute_store.h

typedef uint32_t attribute_store_type_t;
/**
 * @defgroup attribute_store Attribute Store
 * @ingroup unify_components
 * @brief Attribute store.
 *
 * The Attribute store is a tree of attributes stored to save the state
 * of an object in the current network/environment.
 *
 * The attribute store is a directed acyclic graph, where there is
 * a root node under which all other nodes will have 1 parent and
 * a number of children.
 *
 * A tree node is identified by an @ref attribute_store_node_t handle
 * Each node has a type, defined by its @ref attribute_store_type_t type.
 *
 * This indicates what the value represents.
 * There are no restrictions regarding which node (type) is a parent or
 * a child.
 *
 * Each node has one or more value states, defined by
 * @ref attribute_store_node_value_state_t.
 * Each value state (REPORTED/DESIRED) contains a value of
 * variable length that can be read and written.
 * Nodes created have, by default, unassigned values in each of their
 * value state. In this case, the value length is set to 0.
 *
 * Finally, an example of attribute store tree organization is shown
 * in the image below.
 * Some Attribute IDs are color-coded for readability
 * and they do not represent any difference between nodes apart from
 * their attribute type value.
 * \image html attribute_store_example_representation.png "Attribute store tree example"
 *
 */

/**
 * @defgroup attribute_store_api Attribute Store Public Interface
 * @ingroup attribute_store
 * @brief Public functions from the attribute store.
 * It allows other components to manipulate the @ref attribute_store tree.
 * and register callbacks for @ref attribute_store updates.
 *
 * @{
 */

/**
 * @brief Handle to identify attribute store nodes
 */
//typedef void *attribute_store_node_t;
typedef datastore_attribute_id_t attribute_store_node_t;
/**
 * @brief This is the value state of a value.
 */
typedef enum {
  REPORTED_ATTRIBUTE,  ///< This is the value reported by the node or actual value.
  DESIRED_ATTRIBUTE,  ///< This is the value to be applied to the node.
  DESIRED_OR_REPORTED_ATTRIBUTE,  ///< Retrieve the desired value if it exists if not then provide the reported attribute only used for readding.
} attribute_store_node_value_state_t;
/**
 * @brief Set the attribute value of a node in the current attribute store tree.
 *
 * @param node        The node handle for which the value
 *                    must be updated.
 * @param value_state The attribute_store_node_value_state_t
 *                    value state to write for the node.
 *                    (Desired or Reported)
 * @param value       A uint8_t pointer to an array containing
 *                    the data to be written for the node. This array
 *                    may contain up to 255 bytes.
 * @param value_size  The number of bytes to read from the value pointer.
 *
 * @returns SL_STATUS_OK         If the tree node value has been set correctly.
 * @returns SL_STATUS_FAIL       If the value state is not understood.
 * @returns SL_STATUS_NOT_INITIALIZED if the attribute store is not initialized
 *                                    properly
 */
sl_status_t attribute_store_set_node_attribute_value(
  attribute_store_node_t node,
  attribute_store_node_value_state_t value_state,
  const uint8_t *value,
  uint8_t value_size);