components/uic_rust/uic_attribute_store_rs/src/uic_attribute_store_bindings.rs

extern "C" {
    #[doc = " @brief Safely copies a String in the Attribute Store"]
    #[doc = ""]
    #[doc = " @param node          The Attribute store node under"]
    #[doc = "                      which the value must be written"]
    #[doc = " @param string        C char array containing a String"]
    #[doc = ""]
    #[doc = " @returns sl_status_t returned by @ref attribute_store_set_node_attribute_value"]
    pub fn attribute_store_set_reported_string(
        node: attribute_store_node_t,
        string: *const ::std::os::raw::c_char,
    ) -> sl_status_t;
}
extern "C" {
    #[doc = " @brief Set the Desired value to \"undefined\" (0 size no value)"]
    #[doc = ""]
    #[doc = " @param node        The Attribute store node for which DESIRED"]
    #[doc = "                    must be set to nothing"]
    pub fn attribute_store_undefine_desired(node: attribute_store_node_t);
}
extern "C" {
    #[doc = " @brief Set the Desired value of an Attribute Store node"]
    #[doc = ""]
    #[doc = " @param node        The Attribute store node for which DESIRED"]
    #[doc = "                    must be updated"]
    #[doc = " @param value       A pointer to a variable containing"]
    #[doc = "                    the data to be written for the node."]
    #[doc = " @param value_size  The number of bytes to read from the value pointer."]
    #[doc = ""]
    #[doc = " @returns sl_status_t returned by @ref attribute_store_set_node_attribute_value"]
    pub fn attribute_store_set_desired(
        node: attribute_store_node_t,
        value: *const ::std::os::raw::c_void,
        value_size: u8,
    ) -> sl_status_t;
}
extern "C" {
    #[doc = " @brief Reads the desired value of an attribute store node"]
    #[doc = ""]
    #[doc = " @param node          The Attribute store node under"]
    #[doc = "                      which the value must be retrieved"]
    #[doc = " @param value         Pointer where to copy the value"]
    #[doc = " @param expected_size  The size of the pointer of read_value"]
    #[doc = ""]
    #[doc = " @returns SL_STATUS_OK    if the read value has the expected size and"]
    #[doc = "                          has been copied to the pointer."]
    #[doc = " @returns SL_STATUS_FAIL  if the value is undefined, has not the expected"]
    #[doc = "                          size or has not been copied to the pointer."]
    pub fn attribute_store_get_desired(
        node: attribute_store_node_t,
        value: *mut ::std::os::raw::c_void,
        expected_size: size_t,
    ) -> sl_status_t;
}
extern "C" {
    #[doc = " @brief Copy the value from a node to another."]
    #[doc = ""]
    #[doc = " @param source_node       The node that contains a value to be copied to"]
    #[doc = "                          another node."]
    #[doc = " @param destination_node  The node that the source_node's value will be copied"]
    #[doc = "                          into."]
    #[doc = " @param value_state       The value state to be copied from source_node to"]
    #[doc = "                          destination_node"]
    #[doc = ""]
    #[doc = " @returns SL_STATUS_OK if the value_state value was copied from source_node"]
    #[doc = "                       to destination_node. Empty value copy will be considered"]
    #[doc = "                        successful."]
    #[doc = " @returns SL_STATUS_NOT_FOUND if one of the attribute store nodes does not exist"]
    #[doc = " @returns SL_FAIL if the value cannot be copied"]
    #[doc = ""]
    pub fn attribute_store_copy_value(
        source_node: attribute_store_node_t,
        destination_node: attribute_store_node_t,
        value_state: attribute_store_node_value_state_t,
    ) -> sl_status_t;
}
extern "C" {
    #[doc = " @brief Read an arbitrary sized value from the attribute store"]
    #[doc = " and writes it to a pointer."]
    #[doc = ""]
    #[doc = " @param node          The Attribute store node under"]
    #[doc = "                      which the value must be retrieved"]
    #[doc = " @param value_state   The value_state to retrieve"]
    #[doc = " @param read_value    A pointer where to copy the read"]
    #[doc = "                      value from the attribute store."]
    #[doc = " @param expected_size  The size of the pointer of read_value"]
    #[doc = ""]
    #[doc = " @returns SL_STATUS_OK    if the read value has the expected size and"]
    #[doc = "                          has been copied to the pointer."]
    #[doc = " @returns SL_STATUS_FAIL  if the value is undefined, has not the expected"]
    #[doc = "                          size or has not been copied to the pointer."]
    pub fn attribute_store_read_value(
        node: attribute_store_node_t,
        value_state: attribute_store_node_value_state_t,
        read_value: *mut ::std::os::raw::c_void,
        expected_size: size_t,
    ) -> sl_status_t;
}
extern "C" {
    #[doc = " @brief Sets the value of the first child of a node with a given type."]
    #[doc = " and writes its reported value."]
    #[doc = ""]
    #[doc = " If there is no child of the given type for the parent, it will be created."]
    #[doc = ""]
    #[doc = " @param parent        The Attribute store node under"]
    #[doc = "                      which the child's reported value must be written"]
    #[doc = " @param type          The type of the child"]
    #[doc = " @param value         A pointer to a variable containing"]
    #[doc = "                      the data to be written for the node."]
    #[doc = " @param value_size    The number of bytes to read from the value pointer."]
    #[doc = ""]
    #[doc = " @returns sl_status_t returned by @ref attribute_store_set_node_attribute_value"]
    #[doc = ""]
    pub fn attribute_store_set_child_reported(
        parent: attribute_store_node_t,
        type_: attribute_store_type_t,
        value: *const ::std::os::raw::c_void,
        value_size: u8,
    ) -> sl_status_t;
}
extern "C" {
    #[doc = " @brief Set the value of the first child with a given type."]
    #[doc = ""]
    #[doc = " This function sets the value of the first attribute child"]
    #[doc = " matching a given type."]
    #[doc = ""]
    #[doc = " @param parent Parent node of children"]
    #[doc = " @param type   Type of child"]
    #[doc = " @param state  The value_state"]
    #[doc = " @param value  Value"]
    #[doc = " @return sl_status_t"]
    pub fn attribute_store_set_uint32_child_by_type(
        parent: attribute_store_node_t,
        type_: attribute_store_type_t,
        state: attribute_store_node_value_state_t,
        value: u32,
    ) -> sl_status_t;
}
extern "C" {
    #[doc = " See @ref attribute_store_set_uint32_child_by_type"]
    #[doc = " @param parent Parent node of children"]
    #[doc = " @param type   Type of child"]
    #[doc = " @param state  The value_state"]
    #[doc = " @param value  Value"]
    #[doc = " @return sl_status_t"]
    pub fn attribute_store_set_uint8_child_by_type(
        parent: attribute_store_node_t,
        type_: attribute_store_type_t,
        state: attribute_store_node_value_state_t,
        value: u8,
    ) -> sl_status_t;
}
extern "C" {
    #[doc = " @brief Visit all nodes in the tree."]
    #[doc = ""]
    #[doc = " This function visits all tree nodes going from the top and down."]
    #[doc = " It will continue to the node children if the status returned by"]
    #[doc = " the function is SL_STATUS_OK. If the function returns SL_STATUS_ABORT,"]
    #[doc = " no more nodes are visited. Otherwise, siblings will be visited."]
    #[doc = ""]
    #[doc = " @param top First node to be visited"]
    #[doc = " @param func function to execute"]
    #[doc = " @param depth The current depth of the top node."]
    pub fn attribute_store_walk_tree(
        top: attribute_store_node_t,
        func: ::std::option::Option<
            unsafe extern "C" fn(
                arg1: attribute_store_node_t,
                arg2: ::std::os::raw::c_int,
            ) -> sl_status_t,
        >,
        depth: ::std::os::raw::c_int,
    ) -> sl_status_t;
}
extern "C" {
    #[doc = " @brief Add multiple nodes to a parent if they are not already present."]
    #[doc = ""]
    #[doc = " This is a helper function that will add  a list of nodes to the parent"]
    #[doc = " if they are not already present."]
    #[doc = ""]
    #[doc = " @param parent_node Parent node for the nodes to add."]
    #[doc = " @param attributes array of attribute types"]
    #[doc = " @param count number of attributes to add."]
    pub fn attribute_store_add_if_missing(
        parent_node: attribute_store_node_t,
        attributes: *const attribute_store_type_t,
        count: u32,
    );
}
pub type clock_time_t = ::std::os::raw::c_ulong;
#[doc = " @brief Function prototype callback functions."]
pub type attribute_timeout_callback_t =
    ::std::option::Option<unsafe extern "C" fn(arg1: attribute_store_node_t)>;
extern "C" {
    #[doc = " @brief Sets a callback to be called after a duration for an attribute."]
    #[doc = ""]
    #[doc = " There can be only one node/callback_function combination active at a time."]
    #[doc = " It means that for example, calling the API in the following sequence:"]
    #[doc = " - attribute_timeout_set_callback(1,100,&function1);"]
    #[doc = " - attribute_timeout_set_callback(1,1000,&function1);"]
    #[doc = ""]
    #[doc = " Will lead to only 1 call of function1 in 1000ms from now."]
    #[doc = ""]
    #[doc = " As another example, calling the API in the following sequence:"]
    #[doc = " - attribute_timeout_set_callback(1,100,&function1);"]
    #[doc = " - attribute_timeout_set_callback(1,1000,&function2);"]
    #[doc = " - attribute_timeout_set_callback(2,1000,&function2);"]
    #[doc = ""]
    #[doc = " Will lead to 3 function calls:"]
    #[doc = " - function1(1) in 100ms"]
    #[doc = " - function2(1) in 1000ms"]
    #[doc = " - function2(2) in 1000ms"]
    #[doc = ""]
    #[doc = " @param node               The attribute store node to inspect after the duration."]
    #[doc = " @param duration           The time in ms for the duration to wait."]
    #[doc = " @param callback_function  The function to invoke for the attribute node inspection."]
    #[doc = ""]
    #[doc = " @returns SL_STATUS_OK if the timer is started and the callback will be invoked."]
    #[doc = "          SL_STATUS_FAIL in case of error."]
    pub fn attribute_timeout_set_callback(
        node: attribute_store_node_t,
        duration: clock_time_t,
        callback_function: attribute_timeout_callback_t,
    ) -> sl_status_t;
}
extern "C" {
    #[doc = " @brief Cancels a callback to be called after a duration for an attribute."]
    #[doc = ""]
    #[doc = " @param node               The attribute store node to inspect after the duration."]
    #[doc = " @param callback_function  The function to invoke for the attribute node inspection."]
    #[doc = ""]
    #[doc = " @returns SL_STATUS_OK, indicating that the callback function will not be called."]
    #[doc = "          SL_STATUS_NOT_FOUND if this callback was not active for the node."]
    pub fn attribute_timeout_cancel_callback(
        node: attribute_store_node_t,
        callback_function: attribute_timeout_callback_t,
    ) -> sl_status_t;
}
extern "C" {
    #[doc = " @brief Initializes the UIC attribute timeouts component"]
    #[doc = ""]
    #[doc = " @returns SL_STATUS_OK on success, any other value otherwise"]
    pub fn attribute_timeouts_init() -> sl_status_t;
}
extern "C" {
    #[doc = " @brief Teardown the UIC attribute timeouts component"]
    #[doc = " @returns 0 on success."]
    pub fn attribute_timeouts_teardown() -> ::std::os::raw::c_int;
}
